--- a/css.css
+++ b/css.css
@@ -8,7 +8,12 @@
 body{
     width: 100%;
     height: 100%;
+    background:url(conan.jpg)  left top ;
+    background-size:95% ;
+
 }
+
+
 
 
 /*#################音乐区域位置###################*/
@@ -20,7 +25,7 @@ body{
   	height: 150px;
   	border-radius: 25px;
   	background-color: black;
-    border:1px solid gray;
+    border:1px solid #1065e6;
     border-radius: 10px;
     outline:none;
 }
@@ -51,64 +56,103 @@ body{
   top:740px;
   padding-left:11px; /*搜索文字离边框有距离*/
   text-align:left; font-size:14px;/*设置css文字居左、css字体大小为14px */
-  width: 250px;
+  width: 230px;
   height: 50px;
-  border:1px solid #00F;
-  border-radius: 10px;
+  border:2px solid pink;
+  border-radius: 15px;
   outline:none;
 
+}
+#change_music button:hover{
+  color: red;
+  
 }
 
 #change_button{
   position: absolute;
-  left:350px;
+  left:330px;
   top: 735px;
-  width:80px; height:30px; /*设置宽度和高度（使用PS可以准确获取）*/
+  width:60px; height:30px; /*设置宽度和高度（使用PS可以准确获取）*/
   cursor:pointer; /*设置鼠标经过悬停按钮时候鼠标指针变化为“手指”形。*/
-  font-size: 20px;
+  font-size: 15px;
   text-shadow: 5px 5px 3px #366;
   border-radius: 10px;
   text-align: center;
   box-shadow: 3px 3px 2px #366;
+  font-family: "Microsoft YaHei";
+
   /*outline:none;*/
 }
 #random_button{
   position: absolute;
-  left:350px;
+  left:330px;
   top: 770px;
-  width:80px; height:30px; /*设置宽度和高度（使用PS可以准确获取）*/
+  width:60px; height:30px; /*设置宽度和高度（使用PS可以准确获取）*/
   cursor:pointer; /*设置鼠标经过悬停按钮时候鼠标指针变化为“手指”形。*/
-  font-size: 20px;
+  font-size: 15px;
   text-shadow: 5px 5px 3px #366;
   border-radius: 10px;
   text-align: center;
   box-shadow: 3px 3px 2px #366;
+  font-family: "Microsoft YaHei";
   /*outline:none;*/
 }
 #one_circulation{
   position: absolute;
-  left:440px;
+  left:400px;
   top: 735px;
-  width:80px; height:30px; /*设置宽度和高度（使用PS可以准确获取）*/
+  width:60px; height:30px; /*设置宽度和高度（使用PS可以准确获取）*/
   cursor:pointer; /*设置鼠标经过悬停按钮时候鼠标指针变化为“手指”形。*/
-  font-size: 20px;
+  font-size: 15px;
   text-shadow: 5px 5px 3px #366;
   border-radius: 10px;
   text-align: center;
   box-shadow: 3px 3px 2px #366;
+  font-family: "Microsoft YaHei";
 }
 
 #search_button{
   position: absolute;
-  left:440px;
+  left:400px;
   top: 770px;
-  width:80px; height:30px; /*设置宽度和高度（使用PS可以准确获取）*/
+  width:60px; height:30px; /*设置宽度和高度（使用PS可以准确获取）*/
   cursor:pointer; /*设置鼠标经过悬停按钮时候鼠标指针变化为“手指”形。*/
-  font-size: 20px;
+  font-size: 15px;
   text-shadow: 5px 5px 3px #366;
   border-radius: 10px;
   text-align: center;
   box-shadow: 3px 3px 2px #366;
+  font-family: "Microsoft YaHei";
+  /*outline:none;*/
+}
+
+#lock_button{
+  position: absolute;
+  left:470px;
+  top: 770px;
+  width:60px; height:30px; /*设置宽度和高度（使用PS可以准确获取）*/
+  cursor:pointer; /*设置鼠标经过悬停按钮时候鼠标指针变化为“手指”形。*/
+  font-size: 15px;
+  text-shadow: 5px 5px 3px #366;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 3px 3px 2px #366;
+  font-family: "Microsoft YaHei";
+  /*outline:none;*/
+}
+
+#hello_button{
+  position: absolute;
+  left:470px;
+  top: 735px;
+  width:60px; height:30px; /*设置宽度和高度（使用PS可以准确获取）*/
+  cursor:pointer; /*设置鼠标经过悬停按钮时候鼠标指针变化为“手指”形。*/
+  font-size: 15px;
+  text-shadow: 5px 5px 3px #366;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 3px 3px 2px #366;
+  font-family: "Microsoft YaHei";
   /*outline:none;*/
 }
 /*####################################################*/
@@ -122,7 +166,7 @@ body{
   	width: 450px;
     height: 350px;
     border-radius: 10px;
-    border: 2px solid gray;
+    border: 2px solid blue;
     overflow:hidden;
     text-align: center;
 
@@ -235,7 +279,7 @@ body{
 	text-align:left; font-size:14px;/*设置css文字居左、css字体大小为14px */
 	width: 500px;
 	height: 50px;
-	border:1px solid #00F;
+	border:1px solid #d520c2;
 	border-radius: 10px;
 	outline:none;
 
@@ -249,7 +293,7 @@ body{
 	width:120px; height:50px; /*设置宽度和高度（使用PS可以准确获取）*/
 	cursor:pointer; /*设置鼠标经过悬停按钮时候鼠标指针变化为“手指”形。*/
 	font-size: 25px;
-	text-shadow: 5px 5px 3px #366;
+	text-shadow: 5px 5px 3px gray;
 	border-radius: 10px;
   text-align: center;
   box-shadow: 5px 5px 3px #366;
@@ -272,6 +316,7 @@ body{
   height: 100px;
   opacity : 1;
   background-color: black;
+
 }
 
 #main_b_g{
@@ -330,6 +375,25 @@ body{
 #nav li.sfhover ul{left: auto} 
 */
 /*#####################Game ####################################*/
+#change_game{
+  position: absolute;
+  left:850px;
+    top:770px;
+      width:180px; height:40px; /*设置宽度和高度（使用PS可以准确获取）*/
+  cursor:pointer; /*设置鼠标经过悬停按钮时候鼠标指针变化为“手指”形。*/
+  font-size: 15px;
+  text-shadow: 5px 5px 3px #366;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 3px 3px 2px #366;
+  font-family: "Microsoft YaHei";
+}
+
+#change_game:hover{
+  color:green;
+}
+
+
 h1{
 	font-size: 30px;
     height: 60px;
@@ -349,10 +413,11 @@ h1{
     width: 550px;
     height: 400px;
     background: white;
-    border: 2px solid gray;
+    border: 4px solid green;
     margin: 0 auto;
     position: absolute;
     overflow: hidden;
+    border-radius: 10px;
 
     opacity:0.8;/*   设置透明度*/
 }
@@ -368,6 +433,8 @@ h1{
     overflow: hidden;
 }
 
+
+
 #All_Game #timeText{
 	position: absolute;
 	left:420px;
@@ -377,40 +444,93 @@ h1{
 	position: absolute;
 	left:420px;
   	top:200px;
+    font-size:30px;letter-spacing:-2px;font-family:Arial,Helvetica, Sans-Serif;
+    color: #1065e6;
+    text-align: center;
 }
 
 #All_Game #Start_1{
 	position: absolute;
 	left:410px;
   	top:50px;
-  	width: 60px;
-    height: 28px;
-    cursor:pointer;
-    border-radius: 10px;/*圆滑边角*/
+  	  width:60px; height:30px; /*设置宽度和高度（使用PS可以准确获取）*/
+  cursor:pointer; /*设置鼠标经过悬停按钮时候鼠标指针变化为“手指”形。*/
+  font-size: 15px;
+  text-shadow: 5px 5px 3px #366;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 3px 3px 2px #366;
+  font-family: "Microsoft YaHei";
+}
+
+#speed_sel_button{
+  position: absolute;
+  left:450px;
+    top:350px;
+      width:60px; height:30px; /*设置宽度和高度（使用PS可以准确获取）*/
+  cursor:pointer; /*设置鼠标经过悬停按钮时候鼠标指针变化为“手指”形。*/
+  font-size: 15px;
+  text-shadow: 5px 5px 3px #366;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 3px 3px 2px #366;
+  font-family: "Microsoft YaHei";
+}
+#Stop_Game_block{
+  position: absolute;
+  left:425px;
+    top:90px;
+      width:110px; height:30px; /*设置宽度和高度（使用PS可以准确获取）*/
+  cursor:pointer; /*设置鼠标经过悬停按钮时候鼠标指针变化为“手指”形。*/
+  font-size: 15px;
+  text-shadow: 5px 5px 3px #366;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 3px 3px 2px #366;
+  font-family: "Microsoft YaHei";
+
+}
+
+#speed_sel_text{
+  position: absolute;
+  left:420px;
+    top:300px;
 }
 
 #All_Game #Restart_1{
 	position: absolute;
 	left:480px;
   	top:50px;
-  	width: 60px;
-    height: 28px;
-    cursor:pointer;
-    border-radius: 10px;
+  	  width:60px; height:30px; /*设置宽度和高度（使用PS可以准确获取）*/
+  cursor:pointer; /*设置鼠标经过悬停按钮时候鼠标指针变化为“手指”形。*/
+  font-size: 15px;
+  text-shadow: 5px 5px 3px #366;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 3px 3px 2px #366;
+  font-family: "Microsoft YaHei";
 
 }
+
+#Stop_Game_block:hover ,#Start_1:hover ,#Restart_1:hover ,#speed_sel_button:hover{
+  color: blue;
+  background-color: gray;
+}
+
 
 /* ########################## hyperlink ##########################*/
 
 #hyperlink {
 	position: absolute;
 	left:1350px;
-  	top:150px;
+  	top:450px;
   	width: 450px;
     height: 350px;
     border-radius: 10px;
-    border: 2px solid gray;;
+    border: 3px solid #1065e6;
     overflow: hidden;
+     background:url(back_h.jpg)  left top ;
+    background-size:98% ;
 }
 
 #H_1{
@@ -424,6 +544,7 @@ h1{
   border-radius: 10px;
   text-align: center;
   box-shadow: 5px 5px 3px #366;
+  background-color: pink;
 
   /*outline:none;*/
 }
@@ -478,8 +599,8 @@ h1{
 }
 #H_4{
   position: absolute;
-  left:10px;
-  top: 140px;
+  left:90px;
+  top: 100px;
   width:120px; height:60px; /*设置宽度和高度（使用PS可以准确获取）*/
   cursor:pointer; /*设置鼠标经过悬停按钮时候鼠标指针变化为“手指”形。*/
   font-size: 25px;
@@ -499,8 +620,8 @@ h1{
 }
 #H_5{
   position: absolute;
-  left:170px;
-  top: 140px;
+  left:250px;
+  top: 100px;
   width:120px; height:60px; /*设置宽度和高度（使用PS可以准确获取）*/
   cursor:pointer; /*设置鼠标经过悬停按钮时候鼠标指针变化为“手指”形。*/
   font-size: 25px;
@@ -517,31 +638,12 @@ h1{
   color: yellow;
   background-color: gray;
 }
+
+
 #H_6{
   position: absolute;
-  left:320px;
-  top: 140px;
-  width:120px; height:60px; /*设置宽度和高度（使用PS可以准确获取）*/
-  cursor:pointer; /*设置鼠标经过悬停按钮时候鼠标指针变化为“手指”形。*/
-  font-size: 25px;
-  text-shadow: 5px 5px 3px #366;
-  border-radius: 40px;
-  text-align: center;
-  box-shadow: 5px 5px 3px #366;
-  
-
-  /*outline:none;*/
-}
-
-#H_6:hover{
-  color: indigo;
-  background-color: gray;
-}
-
-#H_7{
-  position: absolute;
   left:10px;
-  top: 270px;
+  top: 190px;
   width:120px; height:60px; /*设置宽度和高度（使用PS可以准确获取）*/
   cursor:pointer; /*设置鼠标经过悬停按钮时候鼠标指针变化为“手指”形。*/
   font-size: 25px;
@@ -555,15 +657,15 @@ h1{
   /*outline:none;*/
 }
 
-#H_7:hover{
+#H_6:hover{
   color: red;
   background-color: gray;
 }
 
-#H_8{
+#H_7{
   position: absolute;
   left:170px;
-  top: 270px;
+  top: 190px;
   width:120px; height:60px; /*设置宽度和高度（使用PS可以准确获取）*/
   cursor:pointer; /*设置鼠标经过悬停按钮时候鼠标指针变化为“手指”形。*/
   font-size: 25px;
@@ -577,46 +679,175 @@ h1{
   /*outline:none;*/
 }
 
-#H_8:hover{
+#H_7:hover{
   color: black;
   background-color: gray;
 }
 
-#H_9{
+#H_8{
   position: absolute;
   left:320px;
-  top: 270px;
+  top: 190px;
   width:120px; height:60px; /*设置宽度和高度（使用PS可以准确获取）*/
   cursor:pointer; /*设置鼠标经过悬停按钮时候鼠标指针变化为“手指”形。*/
   font-size: 25px;
   text-shadow: 5px 5px 3px #366;
   border-radius: 10px;
   text-align: center;
-  box-shadow: 5px 5px 3px #366;
+  box-shadow: 5px 5px 3px gray;
   background-color: gray;
   color: cyan;
 
   /*outline:none;*/
 }
 
-#H_9:hover{
+#H_8:hover{
   color: yellow;
   background-color: gray;
 }
+
+#H_9{
+  position: absolute;
+  left:90px;
+  top: 270px;
+  width:120px; height:60px; /*设置宽度和高度（使用PS可以准确获取）*/
+  cursor:pointer; /*设置鼠标经过悬停按钮时候鼠标指针变化为“手指”形。*/
+  font-size: 25px;
+  text-shadow: 5px 5px 3px gray;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 5px 5px 3px #366;
+  
+
+  /*outline:none;*/
+}
+
+#H_9:hover{
+  color: indigo;
+  background-color: gray;
+}
+
+#H_10{
+  position: absolute;
+  left:250px;
+  top: 270px;
+  width:120px; height:60px; /*设置宽度和高度（使用PS可以准确获取）*/
+  cursor:pointer; /*设置鼠标经过悬停按钮时候鼠标指针变化为“手指”形。*/
+  font-size: 25px;
+  text-shadow: 5px 5px 3px gray;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 5px 5px 3px #366;
+  
+
+  /*outline:none;*/
+}
+
+#H_10:hover{
+  color: indigo;
+  background-color: gray;
+}
+
 /*################################################################*/
-#else_game {
+#calendar {
+  background: url(时间4.jpg);
+  background-size:100% ;
 	position: absolute;
 	left:1350px;
-  	top:550px;
+  	top:150px;
   	width: 450px;
     height: 250px;
     border-radius: 10px;
-    border: 2px solid gray;;
+    border: 2px solid #d64632;
+    cursor: pointer;
+}
+#calendar h2{
+  position: relative;
+  
+  /*top:10px;
+  left:150px;*/
+  color : #03a25d;
+  text-align: center;
+  /*background-color: black; */
+  text-shadow: 10px 10px 3px #366;
+  font-size: 40px;
+  cursor:pointer;
+}
+
+#Get_date_year{
+  position: absolute;
+  color: #1065e6;
+  top:50px;
+  left:20px;
+  font-size: 50px;
+  text-shadow: 10px 10px 3px #366;
+  cursor: pointer;
+}
+#Get_date_month{
+  position: absolute;
+  color: pink;
+  top:50px;
+  left:150px;
+  font-size: 50px;
+  text-shadow: 10px 10px 3px #366;
+  cursor: pointer;
+}
+#Get_date_date{
+  position: absolute;
+  color: #66fc76;
+  top:50px;
+  left:230px;
+  font-size: 50px;
+  text-shadow: 10px 10px 3px #366;
+  cursor: pointer;
+}
+#Get_date_week{
+  position: absolute;
+  color: yellow;
+  top:50px;
+  left:300px;
+  font-size: 50px;
+  text-shadow: 10px 10px 3px #366;
+  cursor: pointer;
+}
+#Get_date_hour{
+  position: absolute;
+  color: #df432e;
+  top:150px;
+  left:50px;
+  font-size: 50px;
+  text-shadow: 10px 10px 3px #366;
+  cursor: pointer;
+}
+#Get_date_minute{
+  position: absolute;
+  color: #03a25d;
+  top:150px;
+  left:130px;
+  font-size: 50px;
+  text-shadow: 10px 10px 3px #366;
+  cursor: pointer;
+}
+#Get_date_second{
+  position: absolute;
+  color: #66e2fc;
+  top:150px;
+  left:210px;
+  font-size: 50px;
+  text-shadow: 10px 10px 3px #366;
+  cursor: pointer;
 }
 
 
-
-
+#Get_date_all{
+  position: absolute;
+  letter-spacing:0px;font-family:Arial,Helvetica, Sans-Serif;
+  top:110px;
+  left:380px;
+  font-size: 40px;
+  text-shadow: 10px 10px 3px #366;
+  cursor: pointer;
+}
 
 
 
